# oasis

./: .dockerignore  .gitignore  .py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analyze.py  config.py  docker-compose.yml  embedding.py  oasis.py  ollama_manager.py  pyproject.toml  report.py  requirements.txt  tools.py
.cursor/rules/: git-history-conventions.mdc  (+5 more)
oasis/: __init__.py  analyze.py  cache.py  config.py  context_manager.py  embedding.py  enums.py  legacy_vulnerability_mapping.py  oasis.py  ollama_manager.py  report.py  snippet_lines.py  tools.py  web.py
test_files/: Vulnerable.cs  Vulnerable.java  vulnerability_fixture_coverage.txt  vulnerable.php  vulnerable.py  vulnerable.sh
tests/: test_analysis_root_path.py  test_analyze_orchestration.py  test_analyze_scoring.py  test_assistant_chat_context.py  test_assistant_persistence.py  test_assistant_prompt_shrink.py  test_assistant_rag.py  test_assistant_scan_aggregate.py  test_assistant_think_parse.py  test_assistant_validation.py  test_cache.py  test_chunk_spans.py  test_cli_update.py  test_config_report.py  test_context_expand.py  test_embedding_pure.py  test_executive_dashboard_preview.py  test_export.py  test_helpers_dashboard.py  test_helpers_lazy_exports.py  test_helpers_lazy_subpackage_exports.py  test_langgraph_counts.py  test_langgraph_pipeline_alignment.py  test_oasis_cli.py  test_oasis_web_mode.py  test_ollama_manager_resilience.py  test_path_containment.py  test_poc_digest.py  test_prompt_compose.py  test_report_jinja_filters.py  test_report_paths.py  test_report_project_layout.py  test_report_schema.py  test_snippet_lines.py  test_structured_output_degeneracy.py  test_structured_output_parsing.py  test_tools_parse_input.py  test_vulnerability_fixtures_alignment.py  test_web_assistant_api.py  test_web_collect_report_data.py
vulnerability/: auth.json  cmdi.json  config.json  cors.json  crypto.json  csrf.json  data.json  debug.json  deser.json  idor.json  input.json  jwt.json  lfi.json  logging.json  pathtra.json  rce.json  redirect.json  rfi.json  secrets.json  session.json  sqli.json  ssrf.json  upload.json  xss.json  xxe.json
(+235 files in other folders)
