[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oasis"
version = "0.1.0"
description = "Ollama Automated Security Intelligence Scanner"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL v3"
authors = [
    { name = "psyray" }
]
dependencies = [
    "ollama>=0.1.5",
    "weasyprint>=60.1",
    "markdown>=3.5.1",
    "tqdm>=4.66.1",
    "numpy>=1.24.0",
    "fonttools>=4.47.0",
    "httpx>=0.26.0",
]

[project.scripts]
oasis = "oasis:main"

[tool.hatch.build.targets.wheel]
packages = ["."] 