[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oasis"
version = "0.6.1"
description = "Ollama Automated Security Intelligence Scanner"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [
    { name = "psyray" }
]
dependencies = [
    "packaging>=24.0",
    "pydantic>=2.10.0",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.45",
    "ollama>=0.4.7",
    "weasyprint>=60.1",
    "markdown>=3.7",
    "tqdm>=4.67.1",
    "numpy>=2.0.2",
    "fonttools>=4.56.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "flask-socketio>=5.3.6",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
]

[project.scripts]
oasis = "oasis:main"

[tool.hatch.build.targets.wheel]
packages = ["oasis"] 